--- a/web/package.json
+++ b/web/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "three": "^0.180.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
+    "@types/three": "^0.180.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
