--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "core-js": "^3.8.3",
     "gsap": "^3.13.0",
     "three": "^0.180.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@types/three": "^0.180.0",
